--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
     "autoprefixer": "^10.4.2",
     "next": "12.0.7",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^3.0.13"
+    "tailwindcss": "^3.0.13",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "eslint": "8.6.0",
